# godot

./: build.bat
core/: class_db.cpp
modules/v8/: SCsub  config.py  js_editor.cpp  js_engine_initializer.cpp  js_engine_initializer.h  js_functions.cpp  js_functions.h  js_language.cpp  js_language.h  js_registrations.cpp  js_registrations.h  js_resource_format.cpp  js_resource_format.h  js_script.cpp  js_script.h  js_script_instance.cpp  js_script_instance.h  register_types.cpp
modules/v8/debugger/: inspector_agent.cc  inspector_agent.h  inspector_io.cc  inspector_socket.cc  inspector_socket.h  inspector_socket_server.cc  v8_inspector_protocol_json.h
modules/v8/jslib/: CMakeLists.txt  JavaScriptWrapper.cpp  chakra_test.cmake  v8_test.cmake
modules/v8/jslib/jswrapper/: CMakeLists.txt  State.hpp  config.hpp
modules/v8/jslib/jswrapper/chakracore/: CMakeLists.txt  Class.cpp  HelperMacros.h  Object.cpp  Object.hpp  Utils.cpp
modules/v8/jslib/jswrapper/v8/: CMakeLists.txt  Class.cpp  HelperMacros.h  Object.cpp  Object.hpp  ObjectWrap.cpp  ScriptEngine.cpp
modules/v8/jslib/jswrapper/v8/debugger/: env.h  inspector_io.cc  node.cc  util.cc
