cmake_minimum_required(VERSION 3.0)


set(JSWrapper_SRC
"${CMAKE_CURRENT_LIST_DIR}/SeApi.h"
"${CMAKE_CURRENT_LIST_DIR}/State.hpp"
"${CMAKE_CURRENT_LIST_DIR}/Value.hpp"
"${CMAKE_CURRENT_LIST_DIR}/config.cpp"
"${CMAKE_CURRENT_LIST_DIR}/HandleObject.cpp"
"${CMAKE_CURRENT_LIST_DIR}/MappingUtils.cpp"
"${CMAKE_CURRENT_LIST_DIR}/RefCounter.cpp"
"${CMAKE_CURRENT_LIST_DIR}/State.cpp"
"${CMAKE_CURRENT_LIST_DIR}/Value.cpp"
"${CMAKE_CURRENT_LIST_DIR}/config.hpp"
"${CMAKE_CURRENT_LIST_DIR}/HandleObject.hpp"
"${CMAKE_CURRENT_LIST_DIR}/MappingUtils.hpp"
"${CMAKE_CURRENT_LIST_DIR}/Object.hpp"
"${CMAKE_CURRENT_LIST_DIR}/RefCounter.hpp"

)
set(JWRAPPER_TARGET_LIBRARIES ${JWRAPPER_TARGET_LIBRARIES})
set(JWRAPPER_TARGET_DEFINITIONS ${JWRAPPER_TARGET_DEFINITIONS})
set(JWRAPPER_TARGET_INCLUDES ${JWRAPPER_TARGET_INCLUDES})
set(JWRAPPER_TARGET_COMMANDS ${JWRAPPER_TARGET_COMMANDS})
set(JWRAPPER_SOURCES ${JWRAPPER_SOURCES} 
	${JSWrapper_SRC}
)


if(${JWRAPPER_ENGINE_V8})
	add_subdirectory(v8)
elseif(${JWRAPPER_ENGINE_JCC})
	add_subdirectory(jsc)
elseif(${JWRAPPER_ENGINE_SM})
	add_subdirectory(sm)
elseif(${JWRAPPER_ENGINE_CHAKRA})
	add_subdirectory(chakracore)
endif()


set(JWRAPPER_SOURCES ${JWRAPPER_SOURCES} PARENT_SCOPE)
set(JWRAPPER_TARGET_LIBRARIES ${JWRAPPER_TARGET_LIBRARIES} PARENT_SCOPE)
set(JWRAPPER_TARGET_DEFINITIONS ${JWRAPPER_TARGET_DEFINITIONS} PARENT_SCOPE)
set(JWRAPPER_TARGET_INCLUDES ${JWRAPPER_TARGET_INCLUDES} PARENT_SCOPE)
set(JWRAPPER_TARGET_COMMANDS ${JWRAPPER_TARGET_COMMANDS} PARENT_SCOPE)

